# Tests-for-GitHub-actions

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/actions/setup-python-and-poetry/: action.yml
.github/workflows/: test_setup-python-and-poetry.yml  test_setup-qt-libs.yml
demo_app/: test.py
demo_python/: __init__.py  test.py
